--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda de Oração</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="assets/script.js"></script>
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Agenda de Oração</h1>
+        <h3><img src="assets/logo.png" width="100px"/> Agenda de Oração</h3>
         <div class="form-group">
             <label for="dataSelecionada">Selecione uma data:</label>
             <input type="date" id="dataSelecionada" class="form-control">
