icone para compartilhar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda de Oração</title>
+    <meta property="og:title" content="IEC - Moreno">
+    <meta property="og:description" content="Agenda de Oração">
+    <meta property="og:image" content="https://xaviertecbr.github.io/iecmoreno-agenda-oracao/assets/logo.png">
+    <meta property="og:url" content="https://xaviertecbr.github.io/iecmoreno-agenda-oracao/">
+    <meta property="og:type" content="website">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
